feat: ⚡ added initial update inspection information

--- a/pages/inspector/components/dashboard.html
+++ b/pages/inspector/components/dashboard.html
@@ -78,11 +78,25 @@
    <div class="col-md-4 col-xl-3">
     <div class="card bg-c-green order-card">
      <div class="card-body">
-      <h6 class="mb-2">Total Violations</h6>
+      <h6 class="mb-2">Total Resolved Violations</h6>
       <div class="d-flex align-items-center gap-2">
        <i
         class="fa fa-check-circle text-white"
         aria-label="Violations Icon"
+       ></i>
+       <h2 id="total_resolve">0</h2>
+      </div>
+     </div>
+    </div>
+   </div>
+   <div class="col-md-4 col-xl-3">
+    <div class="card bg-c-pink order-card">
+     <div class="card-body">
+      <h6 class="mb-2">Total Violations</h6>
+      <div class="d-flex align-items-center gap-2">
+       <i
+        class="fa fa-exclamation-triangle text-white"
+        aria-label="Overdue Icon"
        ></i>
        <h2 id="total_violations">0</h2>
       </div>
